--- a/Pre_LN_Transformer.ipynb
+++ b/Pre_LN_Transformer.ipynb
@@ -57,6 +57,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Data preprocessing is done with Tensorflow because it is far more cleaner"
+      ],
+      "metadata": {
+        "id": "JsYkqO7wO18P"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -587,7 +596,7 @@
         "def accuracy_fcn(target, prediction):\n",
         "    padding_mask = (target != 0)\n",
         "    accuracy = (target == torch.argmax(prediction, dim=2))\n",
-        "    accuracy = padding_mask & accuracy # And oper. If padding mask is 0 ( padded accuracy is not counted)\n",
+        "    accuracy = padding_mask & accuracy # And operation. If padding mask is 0 ( padded accuracy is not counted)\n",
         "    padding_mask = padding_mask.float()\n",
         "    accuracy = accuracy.float()\n",
         "    # Compute the mean accuracy over the unmasked values\n",
@@ -721,15 +730,15 @@
         "\n",
         "      # Print every 10 steps\n",
         "      if step % 10 == 0 and not (step == 0):\n",
-        "          print(f\"Step {step} | Average Loss: {sum(loss_list[-10:]) / 10}\")\n",
-        "          print(f\"Step {step} | Average BLEU Score: {sum(bleu_list[-10:]) / 10}\")\n",
+        "        print( f\"Step {step} | Average Loss: {sum(loss_list[-10:]) / 10} Average BLEU Score: {sum(bleu_list[-10:]) / 10}\")\n",
         "\n",
         "    # Plot training loss\n",
-        "    plt.plot(loss_list)\n",
-        "    plt.xlabel('Epoch')\n",
-        "    plt.ylabel('Loss')\n",
-        "    plt.title('Loss vs Epoch')\n",
-        "    plt.show()\n",
+        "    if PLOT:\n",
+        "      plt.plot(loss_list)\n",
+        "      plt.xlabel('Epoch')\n",
+        "      plt.ylabel('Loss')\n",
+        "      plt.title('Loss vs Epoch')\n",
+        "      plt.show()\n",
         "\n",
         "    self.scheduler.step()\n",
         "    self.epochs_done += 1\n",
@@ -816,6 +825,17 @@
       "source": [
         "## Training\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "PLOT= False # Plots loss after every epoch"
+      ],
+      "metadata": {
+        "id": "QUCTxvgqOg06"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1163,7 +1183,7 @@
         "id": "0z5DgX2oh6k-",
         "outputId": "8a53363a-d73b-4c38-9e6a-764e77aa4f7a"
       },
-      "execution_count": 238,
+      "execution_count": null,
       "outputs": [
         {
           "metadata": {
@@ -1464,7 +1484,7 @@
         "id": "-YcKP3BPpFpP",
         "outputId": "2d2cd903-cd4b-4bea-8fc7-1cfe9124c030"
       },
-      "execution_count": 239,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1485,7 +1505,7 @@
       "metadata": {
         "id": "mG_E2_l6pNgf"
       },
-      "execution_count": 241,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1510,7 +1530,7 @@
         "id": "UxAH8HT6pCtk",
         "outputId": "2cc75f71-4eb8-437f-e67c-d8c85afe8513"
       },
-      "execution_count": 242,
+      "execution_count": null,
       "outputs": [
         {
           "metadata": {
@@ -1819,7 +1839,7 @@
         "id": "OXTn0jGHxerG",
         "outputId": "52ff82be-154e-44ab-c3f3-a5d995b928b3"
       },
-      "execution_count": 243,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1949,7 +1969,7 @@
       "metadata": {
         "id": "q0NNvAPq1yS8"
       },
-      "execution_count": 254,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1960,32 +1980,6 @@
       "source": [
         "# Plotting"
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "train_Loss=[10.588291645050049, 6.697756523781634,4.997304841981712, 4.54053109081079, 4.199784906197947,3.87630628863125,3.5969779592879276,3.3498673320662045,2.886852409822721, 2.747726381247771,2.7305289075729693,2.724239352747058,\n",
-        "  2.7231647579382496,\n",
-        "  2.7284637326044394,\n",
-        "  2.7299675941467285,\n",
-        "  2.728937730721548,2.729558215919116, 2.7277800647924977]\n",
-        "\n",
-        "train_BLEU=[0,0.01537573400268761,0.04258268214844771, 0.06292651619179529,0.08363513434813505,0.10309858284818131, 0.12249566151178518, 0.140070676236975,0.18183270965621962, 0.19999104216197022,0.20121720410998836, 0.2020227563216125,\n",
-        "  0.20110546155909015,\n",
-        "  0.20272806395482615,\n",
-        "  0.20280781592292862,\n",
-        "  0.20197799035303557,0.20539164090924433, 0.20248993665758042]\n",
-        "val_loss=[10.588291645050049,5.199840813875198,4.682565897703171,4.43632972240448,4.11738058924675,3.910936579108238, 3.7616568207740784,3.6233210265636444,3.490924119949341,3.4826341420412064, 3.485999673604965,\n",
-        " 3.4806091487407684,3.4825533032417297,3.4914670288562775,3.489228382706642,3.4926939755678177, 3.4748511016368866,3.483874872326851]\n",
-        "val_bleu=[0, 0.028447456463395093, 0.06260426485782009, 0.06815097230056344,0.1043921251656392,0.12270532981611493,\n",
-        "  0.13446613710904837,0.1557190538836989,0.1783056171476345,0.17895096726328494,0.1774759683510965,\n",
-        " 0.17812013943299876,0.17839478558665506,0.17720565450234418,0.17795502985502287,0.177927685580155,0.18009509199424892, 0.17748459685637452]"
-      ],
-      "metadata": {
-        "id": "-6qfYn6S1bff"
-      },
-      "execution_count": 249,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -2007,7 +2001,7 @@
         "id": "0IMabr-y2glQ",
         "outputId": "fe2794fd-f675-4862-f73e-78b51e73ff76"
       },
-      "execution_count": 252,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2041,7 +2035,7 @@
         "id": "tPCLcHX54tnZ",
         "outputId": "5606e532-2f6f-4f99-e25b-b0aee456faf8"
       },
-      "execution_count": 253,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2066,7 +2060,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 260,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
