--- a/Pre_LN_Transformer.ipynb
+++ b/Pre_LN_Transformer.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "feLUw4U_5Ygs"
       },
@@ -16,7 +16,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "uGFxrfjK6CcU"
       },
@@ -38,7 +38,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "LON-hvqOAMPj"
       },
@@ -67,7 +67,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "1tw5UDV4SdhZ"
       },
@@ -84,7 +84,7 @@
       "metadata": {
         "id": "I1erbYKwtr4l"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -103,7 +103,7 @@
           "height": 105
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -132,7 +132,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "n81t31TrSSP9"
       },
@@ -140,26 +140,24 @@
       "source": [
         "from pickle import load, dump, HIGHEST_PROTOCOL\n",
         "from numpy.random import shuffle\n",
-        "from tensorflow.keras.preprocessing.text import Tokenizer\n",
         "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
         "from tensorflow import convert_to_tensor, int64\n",
         "\n",
         "class PrepareDataset:\n",
-        "    def __init__(self, **kwargs):\n",
-        "        super(PrepareDataset, self).__init__(**kwargs)\n",
-        "        self.n_sentences = 10000 # Number of sentences to include in the dataset\n",
-        "        self.train_split = 0.9  # Ratio of the training data split\n",
-        "        # self.val_split =  # Ratio of the validation data split\n",
-        "\n",
+        "    def __init__(self):\n",
+        "      # self.n_sentences = 10000 # Number of sentences to include in the dataset\n",
+        "      self.train_split = 0.9  # Ratio of the training data split\n",
+        "      # self.val_split =  # Ratio of the validation data split\n",
+        "-\n",
         "    # Fit a tokenizer\n",
         "    def create_tokenizer(self, dataset):\n",
-        "        tokenizer = Tokenizer()\n",
-        "        tokenizer.fit_on_texts(dataset)\n",
+        "      tokenizer = tensorflow.keras.preprocessing.text.Tokenizer()\n",
+        "      tokenizer.fit_on_texts(dataset)\n",
         "\n",
-        "        return tokenizer\n",
+        "      return tokenizer\n",
         "\n",
         "    def find_seq_length(self, dataset):\n",
-        "        return max(len(seq.split()) for seq in dataset)\n",
+        "      return max(len(seq.split()) for seq in dataset)\n",
         "\n",
         "    def find_vocab_size(self, tokenizer, dataset):\n",
         "        tokenizer.fit_on_texts(dataset)\n",
@@ -183,10 +181,8 @@
         "\n",
         "    def __call__(self, filename, **kwargs):\n",
         "        # Load a clean dataset\n",
-        "        clean_dataset = load(open(filename, 'rb'))\n",
-        "\n",
-        "        # Reduce dataset size\n",
-        "        dataset = clean_dataset[:self.n_sentences, :]\n",
+        "        dataset = load(open(filename, 'rb'))\n",
+        "        n_sentences = len(dataset)\n",
         "\n",
         "        # Include start and end of string tokens\n",
         "        for i in range(dataset[:, 0].size):\n",
@@ -197,8 +193,8 @@
         "        shuffle(dataset)\n",
         "\n",
         "        # Split the dataset in training, validation and test sets\n",
-        "        train = dataset[:int(self.n_sentences * self.train_split)]\n",
-        "        val = dataset[int(self.n_sentences * self.train_split):]\n",
+        "        train = dataset[:int(n_sentences * self.train_split)]\n",
+        "        val = dataset[int(n_sentences * self.train_split):]\n",
         "        # test = dataset[int(self.n_sentences * (1 - self.val_split)):]\n",
         "\n",
         "        # Prepare tokenizer for the encoder input\n",
@@ -230,7 +226,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "VbV_V4_eDQnx"
       },
@@ -277,7 +273,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "psAR0x64lQHm"
       },
@@ -359,7 +355,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "DciGOy9M6SDi"
       },
@@ -403,7 +399,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "s-DJYSLvsL7_"
       },
@@ -431,7 +427,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "3YIqi6tR9OyW"
       },
@@ -465,7 +461,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "4OVFAx9E2RzP"
       },
@@ -511,7 +507,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "FFhvCrVDI0ni"
       },
@@ -542,7 +538,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "czSA5NY6P8fL"
       },
@@ -575,7 +571,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "id": "W0f2INpoO5eW"
       },
@@ -630,7 +626,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "id": "69cMCX3xbtTq"
       },
@@ -687,7 +683,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "id": "GckGmILr07fP"
       },
@@ -739,7 +735,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "id": "ZnSDvfIfM-eI"
       },
@@ -889,12 +885,12 @@
       "metadata": {
         "id": "QUCTxvgqOg06"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "id": "p9rT0Qi7zDyM"
       },
@@ -916,12 +912,12 @@
       "metadata": {
         "id": "L6o4hJhvIypC"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
