Added type Annotations

--- a/Pre_LN_Transformer.ipynb
+++ b/Pre_LN_Transformer.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "feLUw4U_5Ygs"
       },
@@ -16,7 +16,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "uGFxrfjK6CcU"
       },
@@ -40,7 +40,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "LON-hvqOAMPj"
       },
@@ -94,7 +94,7 @@
           "height": 105
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -123,7 +123,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "n81t31TrSSP9"
       },
@@ -199,7 +199,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "VbV_V4_eDQnx"
       },
@@ -370,19 +370,10 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "fk3w2HWksMxa"
-      },
-      "source": [
-        "### Encoder"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "-QWWySJCryg4"
       },
       "source": [
-        "#### FFNN"
+        "## FFNN and Layernorm"
       ]
     },
     {
@@ -391,14 +382,13 @@
         "id": "KY4Z79N-6THb"
       },
       "source": [
-        "Layernorm is applied at the end of each sublayer. </br>\n",
         "\n",
         "FFNN is applied at the end of each encoder and decoder block. FFNN layer is composed of two linear opeartions. This layer changes the last dimension to d_ff an then takes it back. This layer has a ReLU layer inbetween, but not after."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 14,
       "metadata": {
         "id": "DciGOy9M6SDi"
       },
@@ -417,6 +407,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Layernorm is applied at the end of each sublayer. </br>"
+      ],
+      "metadata": {
+        "id": "vT9goAgHajeL"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "class layernorm(nn.Module):\n",
@@ -432,8 +431,70 @@
       "metadata": {
         "id": "pizqkNLbDQi_"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Positional Encoding"
+      ],
+      "metadata": {
+        "id": "j56_r8bIgm3a"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Positional Encoding table is precomputed.\n",
+        "\n",
+        "1) Number of rows is determined by max sequence length (This is extracted from the training set).\n",
+        "\n",
+        "2) Number of columns is embedding dimension or model_dimension."
+      ],
+      "metadata": {
+        "id": "Wf1pm8G1g9Hl"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class PositionalEncoding(nn.Module):\n",
+        "  def __init__(self, model_dimension: int, expected_max_sequence_length: int):\n",
+        "    super().__init__()\n",
+        "    position_id = torch.arange(expected_max_sequence_length).unsqueeze(1)\n",
+        "    frequencies = 10000 ** (-torch.arange(0, model_dimension, 2, dtype=torch.float) / model_dimension)\n",
+        "\n",
+        "    # Precompute the positional encodings\n",
+        "    positional_encodings_table = torch.zeros(expected_max_sequence_length, model_dimension)\n",
+        "    positional_encodings_table[:, 0::2] = torch.sin(position_id * frequencies)\n",
+        "    positional_encodings_table[:, 1::2] = torch.cos(position_id * frequencies)\n",
+        "\n",
+        "    # Save the encodings as a non-trainable buffer\n",
+        "    self.register_buffer('positional_encodings_table', positional_encodings_table)\n",
+        "\n",
+        "  def forward(self, embeddings_batch: torch.Tensor):\n",
+        "\n",
+        "    assert embeddings_batch.shape[-1] == self.positional_encodings_table.size(1), \\\n",
+        "      f\"Model dimension mismatch: {embeddings_batch.shape[-1]} != {self.positional_encodings_table.size(1)}\"\n",
+        "\n",
+        "    # Select and return positional encodings matching the sequence length\n",
+        "    return self.positional_encodings_table[:embeddings_batch.size(1)]\n"
+      ],
+      "metadata": {
+        "id": "vOQiRUXUgkOL"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "fk3w2HWksMxa"
+      },
+      "source": [
+        "## Encoder"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -446,40 +507,15 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "4_I0TECgvTbK"
-      },
       "source": [
-        "We also introduce a padding mask, which sets all padded tokens to -infinity. This is similar ot look ahead mask introduced in MHA"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
+        "x------------------------------------------------------x</br>\n",
+        "|&nbsp; &nbsp; &nbsp;    &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;     + &nbsp; &nbsp; =&nbsp; &nbsp; &nbsp; layernorm(x)------------------------------layernorm(x) </br>\n",
+        "x->layernorm(x)->MHA(x)->dropout(x)    &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;     |                          &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;   +  = output</br>\n",
+        "     &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;                                       FFNN(x)-- ReLU(x)--FNNN(x) --- dropout(x)"
+      ],
       "metadata": {
-        "id": "s-DJYSLvsL7_"
-      },
-      "outputs": [],
-      "source": [
-        "class PositionalEncoding(nn.Module):\n",
-        "  def __init__(self, model_dimension,expected_max_sequence_length):\n",
-        "      super().__init__()\n",
-        "      position_id = torch.arange(0, expected_max_sequence_length).unsqueeze(1)\n",
-        "      frequencies = torch.pow(10000., -torch.arange(0, model_dimension, 2, dtype=torch.float) / model_dimension)\n",
-        "\n",
-        "      positional_encodings_table = torch.zeros(expected_max_sequence_length, model_dimension)\n",
-        "      positional_encodings_table[:, 0::2] = torch.sin(position_id * frequencies)  # sine on even positions\n",
-        "      positional_encodings_table[:, 1::2] = torch.cos(position_id * frequencies)  # cosine on odd positions\n",
-        "      self.register_buffer('positional_encodings_table', positional_encodings_table)\n",
-        "\n",
-        "  def forward(self, embeddings_batch):\n",
-        "      assert embeddings_batch.ndim == 3 and embeddings_batch.shape[-1] == self.positional_encodings_table.shape[1], \\\n",
-        "          f'Expected (batch size, max token sequence length, model dimension) got {embeddings_batch.shape}'\n",
-        "\n",
-        "      positional_encodings = self.positional_encodings_table[:embeddings_batch.shape[1]]\n",
-        "      return  positional_encodings\n",
-        "\n"
-      ]
+        "id": "X1kKVN-Uh7Nz"
+      }
     },
     {
       "cell_type": "code",
@@ -514,6 +550,15 @@
       "source": [
         "Add a dropout layer after positionalencoding."
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Encoder"
+      ],
+      "metadata": {
+        "id": "XQnEIrf9gU6g"
+      }
     },
     {
       "cell_type": "code",
