Added type Annotations

--- a/Pre_LN_Transformer.ipynb
+++ b/Pre_LN_Transformer.ipynb
@@ -460,7 +460,7 @@
       "cell_type": "code",
       "source": [
         "class PositionalEncoding(nn.Module):\n",
-        "  def __init__(self, model_dimension: int, expected_max_sequence_length: int):\n",
+        "  def __init__(self, model_dimension: int, expected_max_sequence_length: int)-> None:\n",
         "    super().__init__()\n",
         "    position_id = torch.arange(expected_max_sequence_length).unsqueeze(1)\n",
         "    frequencies = 10000 ** (-torch.arange(0, model_dimension, 2, dtype=torch.float) / model_dimension)\n",
@@ -473,7 +473,7 @@
         "    # Save the encodings as a non-trainable buffer\n",
         "    self.register_buffer('positional_encodings_table', positional_encodings_table)\n",
         "\n",
-        "  def forward(self, embeddings_batch: torch.Tensor):\n",
+        "  def forward(self, embeddings_batch: torch.Tensor)-> torch.Tensor:\n",
         "\n",
         "    assert embeddings_batch.shape[-1] == self.positional_encodings_table.size(1), \\\n",
         "      f\"Model dimension mismatch: {embeddings_batch.shape[-1]} != {self.positional_encodings_table.size(1)}\"\n",
@@ -525,21 +525,33 @@
       },
       "outputs": [],
       "source": [
+        "from typing import Optional\n",
+        "\n",
         "class EncoderBlock(nn.Module):\n",
-        "  def __init__(self,h,d_k,d_v,d_model,rate):\n",
+        "  def __init__(self, h: int, d_k: int, d_v: int, d_model: int, rate: float, d_ff: int) -> None:\n",
         "    super().__init__()\n",
-        "    self.MHA = MultiHeadAttention(h,d_k,d_v,d_model)\n",
-        "    self.dropout1= nn.Dropout(rate)\n",
-        "    self.layernorm1= layernorm(d_model)\n",
-        "    self.Feed_Forward= Feed_Forward(d_model,d_ff)\n",
-        "    self.layernorm2= layernorm(d_model)\n",
+        "\n",
+        "    self.MHA = MultiHeadAttention(h, d_k, d_v, d_model)\n",
+        "\n",
+        "    self.dropout1 = nn.Dropout(rate)\n",
         "    self.dropout2 = nn.Dropout(rate)\n",
-        "  def forward(self,x,padding_mask=None):\n",
-        "    x_sideline= self.layernorm1(x)\n",
-        "    x = x+ self.dropout1(self.MHA(x_sideline,x_sideline,x_sideline,padding_mask))\n",
-        "    x_sideline1= self.layernorm2(x) # mha->dropout-> residual -> layer\n",
-        "    x = x+ self.dropout2(self.Feed_Forward(x_sideline1))  #FFNN->dropout-> residual -> layer\n",
-        "    return x"
+        "\n",
+        "    self.layernorm1 = layerNorm(d_model)\n",
+        "    self.layernorm2 = layerNorm(d_model)\n",
+        "\n",
+        "    self.Feed_Forward = Feed_Forward(d_model, d_ff)\n",
+        "\n",
+        "  def forward(self, x: torch.Tensor, padding_mask: Optional[torch.Tensor] = None ) -> torch.Tensor:\n",
+        "\n",
+        "    x_sideline = self.layernorm1(x)\n",
+        "\n",
+        "    x = x + self.dropout1(self.MHA(x_sideline, x_sideline, x_sideline, padding_mask))\n",
+        "\n",
+        "    x_sideline1 = self.layernorm2(x)  # mha -> dropout -> residual -> layer norm\n",
+        "\n",
+        "    x = x + self.dropout2(self.Feed_Forward(x_sideline1))  # FFNN -> dropout -> residual -> layer norm\n",
+        "\n",
+        "    return x\n"
       ]
     },
     {
@@ -548,7 +560,8 @@
         "id": "xSM5fsG33Hdu"
       },
       "source": [
-        "Add a dropout layer after positionalencoding."
+        "Encoder block is repeated 8 (n_layers) times.\n",
+        "Nt: Dropout layer is added after positional encoding"
       ]
     },
     {
@@ -569,20 +582,21 @@
       "outputs": [],
       "source": [
         "class Encoder(nn.Module):\n",
-        "  def __init__(self,vocab_size,max_length,d_model,h,d_k,d_v,d_ff, n_layers,rate):\n",
+        "  def __init__(self, vocab_size: int, max_length: int, d_model: int, h: int, d_k: int, d_v: int, d_ff: int, n_layers: int, rate: float) -> None:\n",
         "    super().__init__()\n",
         "    self.embedding = nn.Embedding(vocab_size, d_model)\n",
         "    self.positional_encoding = PositionalEncoding(d_model, max_length)\n",
         "    self.dropout = nn.Dropout(rate)\n",
-        "    self.layers = nn.ModuleList([EncoderBlock(h,d_k,d_v,d_model,rate) for _ in range(n_layers)])\n",
         "\n",
-        "  def forward(self,sentence, padding_mask):\n",
+        "    self.layers = nn.ModuleList([EncoderBlock(h, d_k, d_v, d_model, rate) for _ in range(n_layers)])\n",
+        "\n",
+        "  def forward(self, sentence: torch.Tensor, padding_mask: Optional[torch.Tensor]=None) -> torch.Tensor:\n",
         "    x = self.embedding(sentence)\n",
         "    x = x + self.positional_encoding(x)\n",
         "    x = self.dropout(x)\n",
         "    for layer in self.layers:\n",
-        "      x = layer(x, padding_mask)\n",
-        "    return x"
+        "        x = layer(x, padding_mask)\n",
+        "    return x\n"
       ]
     },
     {
